2004/02/27 02:00 (-0500) muppetman

	* Glib.pm, README, NEWS: unstable release 1.037

2004/02/26 10:16 (-0500) muppetman

	* t/1.t: correct the skip count.  bad muppet.

2004/02/26 21:45 (-0500) muppetman

	* README: fix the spelling of license; update the sandbox instructions.

	* GUtils.xs, t/1.t: add more pod than code.  enable, document, and test
	various utility functions (get|set_application_name, get_user_name,
	get_real_name, get_tmp_dir, get_home_dir).

	* Glib.xs: correct the semantics of the boot-time version check

2004/02/26 22:59 (+0100) kaffeetisch

	* GError.xs: Mark 'file' unused to hush compiler warnings.

	* Glib.xs: Remove debug prints.

	* ParseXSDoc.pm: Check if $firstline is defined before accessing
	it to hush some warnings.

2004/02/25 19:28 (-0500) rwmcfa1

	* ParseXSDoc.pm, GenPod.pm, GBoxed.xs, GError.xs, GMainLoop.xs,
	GParamSpec.xs, GType.xs: =pod position=<pos> -> =for position <pos> 
	some pod parsers don't like text after =pod.

2004/02/25 15:21 (-0500) rwmcfa1

	* GObject.xs: use new positioning pod mech. use #if 0 trick to get 
	tie_properties to act like a real method

	* MakeHelper.pm: extra =back removed

	* GBoxed.xs, GError.xs, GMainLoop.xs, GParamSpec.xs, GType.xs: use new 
	positioning pod mech.

	* GenPod.pm, ParseXSDoc.pm: new positioning pod mech put in place

2004/02/23 17:05 (-0500) muppetman

	* GError.xs: allow '' as well as undef when an SV into a GError,
	as $@ is usually '' to say 'no error'.

2004/02/23 15:16 (-0500) rwmcfa1

	* t/1.t: versions could be 0, which would fail before, check for
	defined.

2004/02/23 14:38 (-0500) muppetman

	* ParseXSDoc.pm: add hidden pods to the list of things to ignore when
	checking if a package is empty; this keeps from clobbering the pod in
	Glib.pm with Glib.pod, among other things.

2004/02/23 01:37 (-0500) muppetman

	* GClosure.xs: don't clobber $_

	* GenPod.pm: if an xsub is marked as a function, generate a
	function's signature for it.
